--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.2 <3.0.0'
+  sdk: '>=3.2.3'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -17,30 +17,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  carousel_slider: ^1.3.1
-  transparent_image: ^1.0.0
-  smooth_star_rating: ^1.0.3
-  cached_network_image: 2.0.0-rc
-  http: ^0.12.0+2
-  provider: ^3.1.0+1
-  flutter_secure_storage: ^3.3.1+1
-  flutter_swiper: ^1.1.6
-  flutter_custom_clippers: ^1.1.1
-  intro_views_flutter: ^2.8.1
-  wave: ^0.0.8
-  font_awesome_flutter: ^8.8.1
-  url_launcher: ^5.5.0
-  flutter_staggered_grid_view: ^0.3.0
-  crop: ^0.1.2
-  share: ^0.6.4+3
+  http: any
+  font_awesome_flutter: any
+  url_launcher: any
   crypto: any
-  rflutter_alert: ^1.0.3
-  google_maps_flutter: ^0.5.30
-  geolocator: ^5.3.2+2
-  cache_image: ^1.0.5
-  shared_preferences: ^0.5.10
+
   auto_size_text: ^3.0.0
   fake_http_client: ^1.0.0
+  mockito: ^5.4.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
